--- a/integration_test/scripts/Dockerfile
+++ b/integration_test/scripts/Dockerfile
@@ -1,4 +1,4 @@
-FROM irisnet/irishub:latest
+FROM bianjie/irita:latest
 
 COPY . /scripts
 
@@ -7,4 +7,4 @@ RUN sh /scripts/setup.sh
 EXPOSE 26657
 EXPOSE 9090
 
-CMD iris start
+CMD irita start
